syntax = "proto3";
package com.vehbiozcan.grpc;

option java_multiple_files = true;

service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse);
  rpc getAllDiscount(Empty) returns (DiscountListResponse);
}

message DiscountResponse {
  string code = 1;
  float newPrice = 2;
  float oldPrice = 3;
  Response response = 4;
}

message DiscountRequest {
  string code = 1;
  float price = 2;
  int64 externalCategoryId = 3;
}

message Empty {}

message DiscountType {
  int64 id = 1;
  string code = 2;
  float discountPrice = 3;
}

message DiscountListResponse {
  repeated DiscountType discounts = 1;
}

message Response{
  bool statusCode = 1;
  string message = 2;
}